<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RCVB</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>

    <string name="first_presentation">Notre rugby se conjugue à la première personne du pluriel</string>
    <string name="second_presentation">Suivez notre actualité \nen temps réel</string>
    <string name="third_presentation">Acheter dans notre boutique \nen ligne</string>
    <string name="first_part">1/3</string>
    <string name="third_part">3/3</string>
    <string name="second_part">2/3</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="nom">Nom</string>
    <string name="email">Email</string>
    <string name="prenom">Prénom</string>
    <string name="tel">Téléphone</string>
    <string name="confirmation">Confirmation</string>
    <string name="mdp">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connecter_api">ou se connecter avec</string>
    <string name="menu">Menu</string>
    <string name="rechercher">Rechercher</string>
    <string name="profil">Profil</string>
    <string name="parametres">Paramètres</string>
    <string name="club">Club</string>
    <string name="balle_de_rugby">Balle de rugby</string>
    <string name="workspace">Workspace</string>
    <string name="shop">Shop</string>
    <string name="space">Space</string>
    <string name="se_deconnecter">Se deconnecter</string>
    <string name="image_de_l_utilisateur">Image de l\'utilisateur</string>
    <string name="home">Home</string>
    <string name="modifier">Modifier</string>
    <string name="boutique">Boutique</string>
    <string name="condition">Conditions générales d\'utilisation</string>
    <string name="a_propos">à propos de cette version</string>
    <string name="confidentialite">Politique de confidentialité</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="mdp_oublie">Mot de passe oublié</string>
    <string name="reinitialisier_mdp">Réinitialisier </string>
    <string name="enregistrer">Enregistrer</string>
    <string name="deconnexion">Déconnexion</string>

    <string name="google_connexion">Se connecter avec Google</string>
    <string name="verifier_email">Vérifier votre messagerie</string>
    <string name="content_email">Image d\'email</string>
    <string name="like">Like</string>
    <string name="partager">Partager</string>
    <string name="categorie">Categorie</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi suscipit lectus et condimentum molestie. In maximus purus sed tempus tempus. Vestibulum sed dignissim urna. Aenean non ipsum varius purus bibendum suscipit sed ullamcorper nunc. Vivamus lacinia nulla eu est bibendum condimentum. Integer in risus nec lectus ullamcorper vehicula. Nam leo quam, semper ornare dignissim eu, porttitor eu felis. Integer aliquam sollicitudin lacus ultricies placerat. Nulla interdum ex id volutpat cursus. Praesent tristique augue a velit tincidunt mattis. Quisque lobortis consequat lectus, vitae interdum dolor tincidunt non. Sed lobortis enim velit, a sodales dui laoreet a. Praesent aliquet arcu arcu, sed consequat velit molestie in. Suspendisse at augue eget lectus hendrerit congue ac a metus. In laoreet libero sapien, id porta purus tempor at.</string>
    <string name="image_de_l_article">Image de l\'article</string>
    <string name="actu_du_rcvb">Actu du RCVB</string>
    <string name="actualite">Actualités</string>
    <string name="publi_le_02_02_2001">Publié le 02/02/2001</string>
    <string name="titre_de_l_article">Titre de l\'article</string>
    <string name="publie_le">Publié le</string>
    <string name="bouton_de_rechcerche">Bouton de rechcerche</string>
    <string name="mon_profil">Mon profil</string>
    <string name="description_notif">Description de la notif</string>
    <string name="titre_notif">Titre de la notif</string>
    <string name="notification_channel_id">myCanal</string>
    <string name="notification_channel_title">myTitle</string>
    <string name="notification_channel_desc">This a test canal</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="version">Version de l\'application : 1.0</string>
    <string name="fa_tes_parti_nde_l_aventure">Faîtes parti \nde l\'aventure</string>


</resources>