<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    android:background="@color/bg_light_dark"
    tools:context=".onboarding.fragments.ArticleDescFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/image_article"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publi_le_02_02_2001"
            android:textSize="12sp"
            android:textColor="@color/bg_white"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorie"
            android:textSize="15sp"
            android:textColor="@color/bg_white"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_de_l_article"
            android:textSize="30sp"
            android:textColor="@color/bg_white"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/bg_white"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textColor="@color/bg_lightgrey"
            android:layout_gravity="center"
            android:lineSpacingExtra="10dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>
