<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_white"
    android:gravity="center_vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvInscription"
    app:layout_constraintVertical_bias="0.297">

    <EditText
        android:id="@+id/etNom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:autofillHints="nom"
        android:background="@drawable/edit_background"
        android:drawableEnd="@drawable/ic_user_circle"
        android:drawableTint="@color/bg_dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/nom"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark" />


    <EditText
        android:id="@+id/etPrenom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:autofillHints="prenom"
        android:background="@drawable/edit_background"
        android:drawableEnd="@drawable/ic_user_circle"
        android:drawableTint="@color/bg_dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/prenom"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:autofillHints="email"
        android:background="@drawable/edit_background"
        android:drawableEnd="@drawable/ic_email"
        android:drawableTint="@color/bg_dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark" />

    <EditText
        android:id="@+id/etTel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:autofillHints="telephone"
        android:background="@drawable/edit_background"
        android:drawableEnd="@drawable/ic_phone"
        android:drawableTint="@color/bg_dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/tel"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark" />

    <EditText
        android:id="@+id/etMdp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:autofillHints="mdp"
        android:background="@drawable/edit_background"
        android:drawableEnd="@drawable/ic_lock"
        android:drawableTint="@color/bg_dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark" />

</LinearLayout>