<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_email_alert"
    android:backgroundTint="#252525"
    android:id="@+id/item_article"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="5dp"
    android:layout_height="190dp">

    <ImageView
        android:id="@+id/image_article"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_img"
        android:contentDescription="@string/image_de_l_article"
        android:src="@color/bg_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_article"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/categorie_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/categorie"
            android:textColor="@color/bg_yellow"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toEndOf="@+id/image_article"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titre_article"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="3"
            android:layout_marginStart="20dp"
            android:text="@string/titre_de_l_article"
            android:textColor="@color/bg_white"
            android:textSize="21sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_article"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imgLike"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/like"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_favorite" />

        <ImageView
            android:id="@+id/imgPartager"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/partager"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/imgCommentaire"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/partager"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_chat" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>