<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context=".onboarding.screens.FirstScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/first_part"
        android:textColor="@color/bg_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="366dp"
            android:padding="20dp"
            android:src="@drawable/slide_"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:padding="10dp"
            android:text="@string/first_presentation"
            android:textAlignment="center"
            android:textColor="@color/bg_dark_blue"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark"
            style="@style/Widget.App.Button.IconOnly"
            app:elevation="12dp"
            android:shadowColor="@color/bg_grey"
            android:shadowDx="20"
            android:shadowDy="20"
            app:cornerRadius="11dp"
            android:layout_marginTop="@dimen/dimen_32"
            app:icon="@drawable/ic_next"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>