<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1A1A"
    tools:context=".forms.ForgotActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/mdp_oublie"
        android:textColor="@color/bg_white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tilEmailOublie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <View
        android:id="@+id/view4"
        android:layout_width="30dp"
        android:layout_height="5dp"
        android:layout_marginTop="28dp"
        android:background="@color/bg_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailOublie"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="64dp"
        android:hint="@string/email"
        android:textColorHint="@color/bg_lightgrey"
        app:boxStrokeColor="@color/bg_white"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/bg_lightgrey"
        app:layout_constraintBottom_toTopOf="@+id/btn_mdpOublie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/bg_white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_white"
            android:textColorHint="@color/bg_dark_blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mdpOublie"
        android:layout_width="230dp"
        android:layout_height="69dp"
        android:layout_marginBottom="228dp"
        android:backgroundTint="@color/bg_white"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reinitialisier_mdp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>